change the HMTL the blog

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,7 @@
 <html>
-    <p>Hi	there!</p>
-	<p>It	works!</p>
+    <head>
+        <title>Susan's Lyrics Blog</title>
+    </head>
+    <p><h1>Coming soon :)</h1></p>
+	
 </html>
