Modify templates to display posts from database

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,6 +2,16 @@
     <head>
         <title>Susan's Lyrics Blog</title>
     </head>
-    <p><h1>Coming soon :)</h1></p>
-	
+    <body>
+        <div>
+            <h1><a	href="/">Suzie's'	Blog</a></h1>
+        </div>
+        {%	for	post	in	posts	%} 
+		<div>
+            <p>published:	{{	post.published_date	}}</p>
+            <h1><a	href="">{{	post.title	}}</a></h1>
+            <p>{{	post.text|linebreaksbr	}}</p>
+		</div>
+        {%	endfor	%}
+    </body>	
 </html>
