--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,3 +1,18 @@
 h1 a{
-    color: cyan;
+    color: blue;
+
+}
+
+.page-header{
+    background-color: cyan;
+    margin-top: 0;
+    padding: 20px 20px 20px 40px;
+}
+
+.post{
+    margin-bottom: 70px;
+}
+
+.post h1 a,	.post h1 a:visited {
+    color: #000000;
 }
