--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,12 @@
-{% load staticfiles %}
-<html>
-    <head>
-        <title>Susan's Lyrics Blog</title>
+{% extends 'blog/base.html' %}
 
-        <link rel = "stylesheet"	href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel = "stylesheet"	href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link rel="stylesheet"	href="{%	static	'css/blog.css'	%}">
-    </head>
-    <body>
-        <div class="page-header">
-            <h1><a	href="/">Suzie's	Blog</a></h1>
-        </div>
-        {%	for	post	in	posts	%} 
+{% block content %}
+    {%	for	post	in	posts	%} 
 		<div class="post">
             <p>published:	{{	post.published_date	}}</p>
             <h1><a	href="">{{	post.title	}}</a></h1>
             <p>{{	post.text|linebreaksbr	}}</p>
 		</div>
-        {%	endfor	%}
-    </body>	
-</html>
+    {%	endfor	%}
+{% endblock %}
+    
